--- a/project1.html
+++ b/project1.html
@@ -1,14 +1,23 @@
 <html>
 
 <head>
-    <style>
-        body {
-            background-image: url('img/bkg2.jpg');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 100% 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="testStyle.css">
 </head>
+
+<div>
+    <!-- menu on top -->
+
+    <ul id="menu">
+        <link rel="stylesheet" href="menustyle.css">
+        <img src="img/keqing confuse.jpg" alt="keqing" height="100">
+    </ul>
+</div>
+
+<body>
+    <h1>test</h1>
+    <img src="img/2.png" alt="megumin">
+    <img src="img/keqing confuse.jpg" alt="keqing">
+    <img src="img/wotsao.jpg" alt="tsao">
+</body>
 
 </html>
