--- a/project1.html
+++ b/project1.html
@@ -5,12 +5,17 @@
 </head>
 
 <div>
-    <!-- menu on top -->
-
-    <ul id="menu">
+    <!-- logo on top -->
+    <ul id="logo">
         <link rel="stylesheet" href="menustyle.css">
         <img src="img/keqing confuse.jpg" alt="keqing" height="100">
     </ul>
+</div>
+
+<div>
+    <button type="button" onclick="alert('Hello world!')" id="bm1">Click Me!</button>
+    <button type="button" onclick="alert('Hello world!')" id="bm2">Click Me!</button>
+    <button type="button" onclick="alert('Hello world!')" id="bm3">Click Me!</button>
 </div>
 
 <body>
